--- a/sem3frontend/src/app/register/register.component.html
+++ b/sem3frontend/src/app/register/register.component.html
@@ -9,14 +9,18 @@
           </div>
           <div class="card-body">
             <!-- Your registration form goes here -->
-            <form>
+            <form (ngSubmit)="OnSubmit()">
               <div class="form-group">
                 <label for="newUsername">Username</label>
-                <input type="text" class="form-control" id="newUsername" placeholder="Enter your new username">
+                <input type="text" class="form-control" [(ngModel)]="this.username" placeholder="Enter your username" name="username">
               </div>
               <div class="form-group">
                 <label for="newPassword">Password</label>
-                <input type="password" class="form-control" id="newPassword" placeholder="Enter your new password">
+                <input type="password" class="form-control" [(ngModel)]="this.password" id="newPassword" placeholder="Enter your password" name="password">
+              </div>
+              <div class="form-group">
+                <label for="newEmail">Email</label>
+                <input type="text" class="form-control" id="newEmail" [(ngModel)]="this.email" placeholder="Enter your Email" name="email">
               </div>
               <button type="submit" class="btn btn-success">Register</button>
             </form>
