--- a/sem3frontend/src/app/login/login.component.html
+++ b/sem3frontend/src/app/login/login.component.html
@@ -8,14 +8,14 @@
             <h4>Login</h4>
           </div>
           <div class="card-body">
-            <form>
+            <form (ngSubmit)="OnSubmit()">
               <div class="form-group">
                 <label for="username">Username</label>
-                <input type="text" class="form-control" id="username" placeholder="Enter your username">
+                <input type="text" class="form-control" [(ngModel)]="this.userEmail" placeholder="Enter your username" name="email">
               </div>
               <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" class="form-control" id="password" placeholder="Enter your password">
+                <input type="password" class="form-control" [(ngModel)]="this.userPassword" placeholder="Enter your password" name="password">
               </div>
               <button type="submit" class="btn btn-primary">Login</button>
             </form>
