--- a/sem3frontend/src/app/navbar/navbar.component.html
+++ b/sem3frontend/src/app/navbar/navbar.component.html
@@ -2,9 +2,7 @@
     <h1 routerLink="/" class="logo">Fooderz</h1>
     <div class="nav_link">
       <a routerLink="/Profile" class="link">Profile</a>
-    </div>
-    <div>
-      <a routerLink="/Chats" class="link"></a>
+      <a routerLink="/chat" class="link">Chat</a>
     </div>
     <div class="nav_login">
       <a routerLink="/login" class="link" *ngIf="this.isLoggedin == false">Inloggen</a>
