--- a/sem3frontend/src/app/login/login.component.html
+++ b/sem3frontend/src/app/login/login.component.html
@@ -11,7 +11,7 @@
             <form (ngSubmit)="OnSubmit()">
               <div class="form-group">
                 <label for="username">Username</label>
-                <input type="text" class="form-control" [(ngModel)]="this.userEmail" placeholder="Enter your username" name="email">
+                <input type="text" class="form-control" [(ngModel)]="this.Username" placeholder="Enter your username" name="email">
               </div>
               <div class="form-group">
                 <label for="password">Password</label>
